# lx-annotate

./: .copilot-instructions.md  .devenv.flake.nix  .env  .env.example  .envrc  .flake.nix.kate-swp  .github_issue_phase_1.2.md  .gitignore  .gitmodules  .instructions.md  .pre-commit-config.yaml  .pyproject.toml.kate-swp  .secrets  AGENTS.md  CRITICAL_PATH_RESOLUTION_BUG.md  Dockerfile  FuturePlans.md  HUB_EXPORT_TODO.md  IMPORT_SERVICES_COMPARISON.md  INGRESS_MODES_TODO.md  Makefile  OLLAMA_EXTRACTOR_FIX.md  PDFSTORE_MIGRATION_COMPLETE.md  PDFSTORE_MIGRATION_SUMMARY.md  README.md  SETUP_GUIDE.md  STORAGE_PATH_ANALYSIS_FINAL.md  TODO.md  _flake.nix  agents.md  app_config.nix  build.nix  db.sqlite3  db.sqlite3-journal  db.sqlite3.bak  debug_examiner_validation.py  default.nix  demo.md  dev-sync-submodules.sh  dev_db.sqlite3  (+38 more)
.devenv/: devenv.json  flake.json  input-paths.txt  load-exports  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  processes  profile  run
.direnv/: flake-profile-15-link  flake-profile-18-link  flake-profile-8-link  flake-profile-9-link
.github/: copilot-instructions.md
.lx-annotate-static.6jBnf4/: AnnotationDashboard.css  AnnotationDashboard2.js  AnonymizationCorrectionComponent.css  AnonymizationCorrectionComponent.js  AnonymizationOverview.js  CaseResolutionPage.js  CaseSetupPage.js  Documentation.js  FindingsCapturePage.js  FrameAnnotation.js  FrameSelectorPage.js  PatientOverview.css  PatientOverview.js  Profile.js  ReportEditorPage.js  ReportTemplateBuilderPage.js  ReportingShell.css  ReportingWorklistPage.js  Timeline.css  VideoExamination.css  VideoExamination.js  dateHelpers.js  examinationStore.js  findingsApi.js  main.css  main.js  mediaTypeStore.js  patientStore.js  useDebug.js  useReportTemplates.css  useReportTemplates.js  videoStore.js
.lx-annotate-static.kZwUdi/: AboutUs.js  AnnotationDashboard.css  AnnotationDashboard.js  AnnotationDashboard2.js  AnonymizationCorrectionComponent.css  AnonymizationCorrectionComponent.js  AnonymizationOverview.css  AnonymizationOverview.js  AnonymizationValidationComponent.css  AnonymizationValidationComponent.js  ApplicationSettingsPage.css  ApplicationSettingsPage.js  CaseResolutionPage.js  Dashboard.js  Export.js  FinalizedResultPage.js  FindingsCapturePage.css  FrameAnnotation.css  FrameSelectorPage.css  HubExport.css  HubExport.js  PageOverview.js  PatientOverview.css  PatientOverview.js  ReportingShell.js  Timeline.js  VideoExamination.css  VideoExamination.js  examinationStore.js  findingsApi.js  main.css  main.js  patientExaminationStore.js  patientStore.js  pdf.worker.min.js  reportTemplatesApi.js  useFindingSelectors.js  videoStore.js
.make-cache/: migrations.sha256
.nix/: lib.nix
agl_anonymizer/: models.py  run_gunicorn.py  settings.py  urls.py  views.py
agl_monitor_flake/: asgi.py  run_gunicorn.py  settings.py  urls.py  wsgi.py
assets/: AnnotationComponent-B6aYvtly.js  FrameAnnotation-Cn-l4qqu.js  FrameAnnotation-Da0Mpg6O.css  UeberUns-Csb6I-L8.js  VideoAnnotation-B62RUm8J.css
conf/: db.yaml  db_pwd
conf_template/: db.yaml  default.env
container/: Dockerfile.dev  Dockerfile.prod  README.md  docker-entrypoint-prod.sh  docker-entrypoint.sh
deploy/: .env.systemd.example  acceptance-smoke.sh  bootstrap-host.sh  deploy.sh  lx-annotate-watcher.service  lx-annotate.service  nginx-lx-annotate.conf
deployment_example/: .env.systemd.example  acceptance-smoke.sh  bootstrap-host.sh  deploy.sh  lx-annotate-watcher.service  lx-annotate.service  nginx-lx-annotate.conf
devenv/: build_inputs.nix  default.nix  environment.nix  management.nix  processes.nix  runtime_packages.nix  scripts.nix  services.nix  vars.nix
devlog/: CLEANUP_SUMMARY_2024.md  CLEANUP_SUMMARY_2025.md  FALLBACK_ANONYMIZATION_IMPROVEMENT.md  FINDING_CLASSIFICATION_STORAGE_SOLUTION.md  FRAME_CLEANING_TIMEOUT_FIX.md  FRONTEND_STATS_ENDPOINT_MIGRATION.md  HTTP_206_RANGE_REQUEST_IMPLEMENTATION.md  METADATA_HARDENING_IMPLEMENTATION.md  MIGRATION_SENSITIVE_META_BUGFIXES.md  MIGRATION_SENSITIVE_META_COMPLETED.md  NEW_REPORT_GENERATION_README.md  PATIENT_CLASSIFICATIONS_REQUIREMENT_ISSUES_IMPLEMENTATION.md  PDFSTORE_ENDPOINT_ANALYSIS.md  PHASE_1.2_CELERY_TASK_INFRASTRUCTURE.md  PHASE_1_2_COMPLETION_REPORT.md  PHASE_2.1_COMPLETION_SUMMARY.md  PHASE_3.1_COMPLETION_SUMMARY.md  PHASE_3_2_COMPLETION_SUMMARY.md  PHASE_4_1_COMPLETION_REPORT.md  PHASE_4_1_UV_WORKSPACE_FIX.md  PROCESSED_VIDEO_DISPLAY_BUG_FIX.md  PROCESSED_VIDEO_PATH_FIX.md  PROGRESS_REPORT_2025-10-09.md  PSEUDONYM_GENERATION_IMPLEMENTATION.md  SENSITIVE_METADATA_PROTECTION_FIX.md  STORAGE_PATH_ANALYSIS_FINAL.md  URL_CLEANUP_REPORT_ENDPOINTS.md  VIDEO_FILE_DISPLAY_FIX.md  VIDEO_IMPORT_FILE_LOCKING_IMPLEMENTATION.md  VIDEO_PROCESSED_TOO_EARLY_FIX.md  VIDEO_SEGMENTS_MIGRATION_ANALYSIS.md  VIDEO_STREAMING_BUG_SUMMARY.md  VIDEO_STREAM_SCOPE_BUG_FIX.md  path_analysis_report.json  path_unification_report.json
docs/: ANONYMIZER.md  API_LEGACY_ENDPOINTS_ANALYSIS.md  Anonymizer.md  CROPPING_DOCUMENTATION.md  DEVICE_MASK_CONFIGURATION.md  EnvSetup.md  FRONTEND_INTEGRATION_FINAL_SOLUTION.md  FRONTEND_INTEGRATION_FIX_REPORT.md  FileWatcher.md  KEYCLOAK.md  MIGRATION_SENSITIVE_META_PLAN.md  MIGRATION_VIDEO_SEGMENT_VALIDATION.md  MediaApi.md  PDF_REIMPORT_DOCUMENTATION.md  PHASE_1.4_COMPLETION_SUMMARY.md  PHASE_1_2_COMPLETION_REPORT.md  PHASE_1_3_COMPLETION_REPORT.md  PHASE_1_3_IMPLEMENTATION_PLAN.md  PHASE_3_2_VERIFICATION_REPORT.md  PHASE_4_1_DOCUMENTATION_SUMMARY.md  REQUIREMENT_GENERATOR_INTEGRATION_REPORT.md  SEGMENTANNOTATION.md  VIDEOSEGMENT_VALIDATION_API.md  VIDEO_CORRECTION_API_FUNCTIONS.md  conf.py  env_setup.md  (+6 more)
(+1655 files in other folders)
