[project]
name = "lx-annotate"

version = "0.0.1"
description = "This webapp provides a frontend interface for annotating AI generated output."
authors = ["maxhild <58726316+maxhild@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
requires-python = "~=3.11"

dependencies = [
    "django>=5.1.1",
    "gunicorn>=23.0.0",
    "djangorestframework>=3.12.4",
    "django-cors-headers>=4.0.0",
    "django-webpack-loader>=0.7.0",
    "requests>=2.32.3",
    "endoreg-db>=0.5.3",
    "django-vite>=3.0.6",
    "whitenoise>=6.8.2",
    "django-extensions>=3.2.3",
]

[tool.setuptools]
packages = ["lx-webpack"]


