[project]
name = "lx-annotate"

version = "0.0.1"
description = "This webapp provides a frontend interface for annotating AI generated output."
authors = [
    { name = "Max Hild", email = "maxhild10@gmail.com"},

    { name = "Thomas J. Lux", email = "lux_t1@ukw.de" },
    { name = "Hamza Zahid" },
    { name = "Peter Kowalczyk" },
]
maintainers = [
    { name = "Max Hild", email = "maxhild10@gmail.com"},
    { name = "Thomas J. Lux", email = "lux_t1@ukw.de" },
    { name = "Hamza Zahid" },
    { name = "Peter Kowalczyk" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "django>=5.1.1",
    "gunicorn>=23.0.0",
    "djangorestframework>=3.12.4",
    "django-cors-headers>=4.0.0",
    "django-webpack-loader>=0.7.0",
    "requests>=2.32.3",
    "endoreg-db",
    "lx-anonymizer",
    "django-vite>=3.0.6",
    "whitenoise>=6.8.2",
    "django-extensions>=3.2.3",
    "python-dotenv>=1.0.1",
    "python-environ>=0.4.54",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "django-environ>=0.12.0",
    "django-rest-framework>=0.1.0",
]


[tool.setuptools]
packages = ["endoreg-db"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lx_annotate.settings"
python_files = ["test_*.py", "*_test.py", "tests/python/*.py"]
addopts = [
  "--import-mode=importlib",
  "-ra",
]


[tool.uv.sources]
endoreg-db = { path = "endoreg-db", editable = true }
lx-anonymizer = { path = "endoreg-db/lx-anonymizer", editable = true }